--- a/views/index.slim
+++ b/views/index.slim
@@ -1,7 +1,7 @@
 center
   h1 Ceasar Cipher
   h3 by Roberto Pando
-form method="POST" action="/"
+form method="POST" action="/cipher"
   input type="hidden" name="_method" value="PUT"
   label for="message" Write a Message:
   br
